MESSAGE("############# base #############")

SET(TARGET_NAME base)

PROJECT(${TARGET_NAME})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../)

ADD_DEFINITIONS(
    -DNOMINMAX 
)

FILE(GLOB_RECURSE BASE_SOURCE *.cc *.h *.cpp *.c)

ADD_LIBRARY(${TARGET_NAME} STATIC ${BASE_SOURCE})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${GROUP_BASE})
