MESSAGE("############# duilib #############")

SET(TARGET_NAME duilib)

PROJECT(${TARGET_NAME})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/../
)

FILE(GLOB_RECURSE DUIBLIB_SOURCE *.cc *.h *.cpp *.c)

ADD_LIBRARY(${TARGET_NAME} STATIC ${DUIBLIB_SOURCE})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${GROUP_BASE})
