MESSAGE("############# cef_module #############")

SET(TARGET_NAME cef_module)

PROJECT(${TARGET_NAME})

ADD_DEFINITIONS(
    -DSUPPORT_CEF
)

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/../
    ${PROJECT_SOURCE_DIR}/../../
    ${PROJECT_SOURCE_DIR}/../cef_wrapper/
)

FILE(GLOB_RECURSE CEF_MODULE_SOURCE *.cc *.h *.cpp *.c)

ADD_LIBRARY(${TARGET_NAME} STATIC ${CEF_MODULE_SOURCE})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${GROUP_UI_COMPONENTS})
