MESSAGE("############# libcef_dll_wrapper #############")

SET(TARGET_NAME libcef_dll_wrapper)

PROJECT(${TARGET_NAME})

ADD_DEFINITIONS(
	-DNOMINMAX
	-DWRAPPING_CEF_SHARED
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/..)

FILE(GLOB_RECURSE LIBCEF_DLL_WRAPPER_SOURCE *.cc *.h *.cpp *.c)

ADD_LIBRARY(${TARGET_NAME} STATIC ${LIBCEF_DLL_WRAPPER_SOURCE})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${GROUP_UI_COMPONENTS})
