SET(TARGET_NAME image_view)

PROJECT(${TARGET_NAME})

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/
    ${PROJECT_SOURCE_DIR}/../
    ${PROJECT_SOURCE_DIR}/../../
)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/..)

FILE(GLOB_RECURSE IMAGE_VIEW_SOURCE *.cc *.h *.cpp *.c)

ADD_LIBRARY(${TARGET_NAME} STATIC ${IMAGE_VIEW_SOURCE})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER ${GROUP_UI_COMPONENTS})
